...
            container.rightAnchor.constraint(equalTo: rightAnchor)
        ])
    }

    private func setupButton(with image: String) {
        headerImageButton = UIButton(frame: .zero)
        headerImageButton.setImage(UIImage(named: "Setting"), for: .normal)
        headerImageButton.tintColor = .white
        container.addArrangedSubview(headerImageButton)
        headerImageButton.addTarget(self, action: #selector(buttonTapped), for: .touchUpInside)

        NSLayoutConstraint.activate([
            headerImageButton.widthAnchor.constraint(equalToConstant: 32),
...
