...
        rocketView.addViewToContainer(view: InfoLabel(name: "Время сгорания", attributedValue: secondStageBurnTime))

        let launchesPresenter = LaunchesPresenter(rocketId: rocket.id)
        let launchesViewController = LaunchesViewController(presenter: launchesPresenter)
        launchesViewController.title = rocket.name

        rocketView.addViewToContainer(view: ButtonView(titleButton: "Посмотреть запуски", buttonAction: { [weak self] in
            launchesPresenter.networkService = (self?.parent as? RocketPageViewController)?.presenter?.networkService
            self?.navigationController?.pushViewController(launchesViewController, animated: true)
        }))
    }
}

...
